--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@capacitor/core": "5.5.0",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
+    "@capacitor/preferences": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
+    "preferences": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
